--- a/Bird-Recognition-Page/frontend/package.json
+++ b/Bird-Recognition-Page/frontend/package.json
@@ -12,10 +12,12 @@
     "plotly.js": "^2.25.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-native": "^0.72.3",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.5",
     "stream-browserify": "^3.0.0",
     "styled-components": "^6.0.7",
@@ -44,5 +46,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3"
   }
 }
