--- a/Bird-Recognition-Page/frontend/package.json
+++ b/Bird-Recognition-Page/frontend/package.json
@@ -16,7 +16,7 @@
     "react-native": "^0.72.3",
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "reactjs-popup": "^2.0.5",
     "stream-browserify": "^3.0.0",
